--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -5,8 +5,7 @@
         <img id="avatar" class="u-photo" src="{{ .Site.Author.avatar }}" width="96" height="96" />
       </a>
       <h1 class="p-name" rel="me">{{ .Site.Author.name }}</h1>
-      {{- $bio := cond .IsHome site.Author.briefbio site.Author.aboutbio -}}
-      <h4 class="p-role">{{ $bio }}</h4>
+      <h4 class="p-role">{{ .Site.Author.aboutbio }}</h4>
     </header>
   </section>
 </div>
