--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -5,7 +5,8 @@
         <img id="avatar" class="u-photo" src="{{ .Site.Author.avatar }}" width="96" height="96" />
       </a>
       <h1 class="p-name" rel="me">{{ .Site.Author.name }}</h1>
-      <h4 class="p-role">{{ .Site.Author.aboutbio }}</h4>
+      <h4 class="p-role">Web developer, designer and blogger from Finland.</h4>
+      <a class="cta" href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Follow on Micro.blog</a>
     </header>
   </section>
 </div>
