--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -6,7 +6,7 @@
       </a>
       <h1 class="p-name" rel="me">{{ .Site.Author.name }}</h1>
       <h4 class="p-role">Web developer, designer and blogger from Finland.</h4>
-      <a class="cta" href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Follow on Micro.blog</a>
+      <a class="cta" href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Follow on Micro.blog →</a>
     </header>
   </section>
 </div>
