--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
     <li><a href="/feed.xml">RSS</a></li>
     <li><a href="/feed.json">JSON Feed</a></li>
     <li><a href="https://micro.blog/{{ .Site.Author.username }}" rel="me">Micro.blog</a></li>
-<!--     <li><a class="u-email" href="mailto:" rel="me">Email</a></li> -->
+    <li><a rel="me" href="https://masto.ai/@juhaliikala">Mastodon</a></li>
   </ul>
   <form method="get" id="search" action="https://duckduckgo.com/">
     <input type="hidden" name="sites" value="{{ "/" | absURL }}"/>
